@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-21T01:46:59Z",
-  "count" : 8,
-  "count_minmax" : [ 7, 8 ],
-  "count_decinc" : [ -0, +8 ],
-  "uniques" : 5,
-  "uniques_minmax" : [ 5, 5 ],
-  "uniques_decinc" : [ -0, +5 ]
+  "timestamp" : "2022-07-04T01:59:49Z",
+  "count" : 4,
+  "count_minmax" : [ 4, 8 ],
+  "count_decinc" : [ -4, +8 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 2, 5 ],
+  "uniques_decinc" : [ -3, +5 ]
 }
