@@ -1,16 +1,11 @@
 {
-  "count": 44,
-  "uniques": 14,
+  "count": 39,
+  "uniques": 11,
   "clones": [
     {
-      "timestamp": "2022-06-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-20T00:00:00Z",
-      "count": 8,
-      "uniques": 5
+      "count": 4,
+      "uniques": 2
     },
     {
       "timestamp": "2022-06-21T00:00:00Z",
