@@ -1,3 +1,10 @@
+2022-07-04T01:59:49Z:
+* notice: last 14d: unq all: 11 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 456 2193 / 484 2237
+* notice: next accum: outdated-unq outdated-all / unq all: 460 2202 / 484 2241
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -4 / +5 +8 -3 -4 / 2 4
+* notice: removed / changed dates: [2022-06-19] / [2022-06-20]
+
 2022-07-03T16:23:27Z:
 * notice: last 14d: unq all: 14 44
 * notice: prev accum: outdated-unq outdated-all / unq all: 456 2193 / 486 2243
